BDT-26 Gift wrap modal fixes

--- a/skin/frontend/eco/default/less/custom.less
+++ b/skin/frontend/eco/default/less/custom.less
@@ -1191,3 +1191,13 @@ ul.pages-accordeon {
 }
 /* END SOCIAL LINKS&LIKES */
 
+/* GIFT WRAP */
+.giftwrap-container {
+  .giftwrap_box {
+    margin: 0 -30px 15px;
+    .giftwrap-radio {
+      text-align: right;
+    }
+  }
+}
+/* END GIFT WRAP */
